# py_project

./: .buildinfo  index.html  module.html  requirements.txt
.github/workflows/: sphinx_docs.yaml  tests.yaml
_modules/: index.html
_modules/package_creation/: string_ops.html
_sources/: module.rst.txt
package_creation/: .coverage  .pre-commit-config.yaml  PUBLICATION_SUCCESS.md  PUBLISHING_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  pyproject.toml
package_creation/docs/source/: conf.py  index.rst
package_creation/src/package_creation/: main.py  string_ops.py
package_creation/tests/: test_string_ops.py
