[project]
name = "ifatmagamha-package-creation"
version = "0.1.0"
description = "A simple Python package for string manipulation operations"
authors = [
    {name = "ifatmagamha",email = "gamhaif@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "package_creation", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
